Adding Many components

--- a/Practice/.vscode/launch.json
+++ b/Practice/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/P90X-App/bin/Debug/netcoreapp3.0/P90X-App.dll",
+            "program": "${workspaceFolder}/Practice/bin/Debug/netcoreapp3.0/WorkoutApp.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/P90X-App",
+            "cwd": "${workspaceFolder}/Practice",
             "stopAtEntry": false,
             // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
             "serverReadyAction": {
